# Task-manager

./: .gitignore  .travis.yml  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: main.yml
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_auto_20210508_1543.py  0002_label_author.py
labels/templates/: label-creation.html
statuses/: admin.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_auto_20210407_1810.py  0002_status_author.py  0003_auto_20210407_1821.py  0004_auto_20210409_2145.py  0005_auto_20210420_1906.py  0006_auto_20210420_1907.py
statuses/templates/: status-creation.html
task_manager/: filters.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_delete_profile.py  0003_delete_task.py
task_manager/statuces/: admin.py  apps.py  forms.py  urls.py  views.py
task_manager/templates/: base.html  index.html  messages.html
task_manager/users/: tests.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210508_1543.py  0002_initial.py  0002_remove_task_status.py  0003_alter_tasklabels_label.py  0003_task_status.py  0004_task_label.py  0005_auto_20210413_1740.py  0006_auto_20210413_1747.py  0007_auto_20210413_2105.py  0008_auto_20210419_2140.py  (+6 more)
users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+39 files in other folders)
