[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mistermikebell <jokerbell7@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"
django-filter = "^2.4.0"
dj-database-url = "^0.5.0"
rollbar = "^0.15.2"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
django-bootstrap4 = "^2.3.1"
python-dotenv = "^0.15.0"
django-crispy-forms = "^1.11.2"
flake8 = "^3.9.0"
django-heroku = "^0.3.1"
psycopg2 = "^2.8.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
